parser.output
Grammar

    0 $accept: program $end

    1 program: global_decl_statement_list func_def_list
    2        | func_def_list

    3 global_decl_statement_list: global_decl_statement_list var_decl_stmt
    4                           | global_decl_statement_list func_decl
    5                           | var_decl_stmt
    6                           | func_decl

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON

    9 func_def_list: func_def

   10 func_header: named_type NAME

   11 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   12         | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

   13 formal_param_list: formal_param_list COMMA formal_param
   14                  | formal_param

   15 formal_param: param_type NAME

   16 param_type: INTEGER
   17           | FLOAT
   18           | BOOL
   19           | STRING

   20 statement_list: statement_list statement
   21               | ε

   22 statement: assignment_statement
   23          | print_statement
   24          | read_statement

   25 optional_local_var_decl_stmt_list: ε
   26                                  | var_decl_stmt_list

   27 var_decl_stmt_list: var_decl_stmt
   28                   | var_decl_stmt_list var_decl_stmt

   29 var_decl_stmt: named_type var_decl_item_list SEMICOLON

   30 var_decl_item_list: var_decl_item_list COMMA var_decl_item
   31                   | var_decl_item

   32 var_decl_item: NAME

   33 named_type: INTEGER
   34           | FLOAT
   35           | VOID
   36           | STRING
   37           | BOOL

   38 assignment_statement: variable_as_operand ASSIGN expression SEMICOLON

   39 print_statement: WRITE expression SEMICOLON

   40 read_statement: READ variable_name SEMICOLON

   41 expression: expression PLUS expression
   42           | expression MINUS expression
   43           | expression MULT expression
   44           | expression DIV expression
   45           | MINUS expression
   46           | LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET
   47           | variable_as_operand
   48           | constant_as_operand

   49 variable_as_operand: variable_name

   50 variable_name: NAME

   51 constant_as_operand: INTEGER_NUMBER
   52                    | DOUBLE_NUMBER
   53                    | STRING_CONSTANT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NAME (258) 10 15 32 50
    INTEGER (259) 16 33
    FLOAT (260) 17 34
    BOOL (261) 18 37
    STRING (262) 19 36
    VOID (263) 35
    ASSIGN (264) 38
    WRITE (265) 39
    READ (266) 40
    INTEGER_NUMBER (267) 51
    DOUBLE_NUMBER (268) 52
    STRING_CONSTANT (269) 53
    LEFT_ROUND_BRACKET (270) 7 8 11 12 46
    RIGHT_ROUND_BRACKET (271) 7 8 11 12 46
    LEFT_CURLY_BRACKET (272) 11 12
    RIGHT_CURLY_BRACKET (273) 11 12
    COMMA (274) 13 30
    SEMICOLON (275) 7 8 29 38 39 40
    PLUS (276) 41
    MINUS (277) 42 45
    MULT (278) 43
    DIV (279) 44


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program (26)
        on left: 1 2
        on right: 0
    global_decl_statement_list (27)
        on left: 3 4 5 6
        on right: 1 3 4
    func_decl (28)
        on left: 7 8
        on right: 4 6
    func_def_list (29)
        on left: 9
        on right: 1 2
    func_header (30)
        on left: 10
        on right: 7 8 11 12
    func_def (31)
        on left: 11 12
        on right: 9
    formal_param_list (32)
        on left: 13 14
        on right: 7 11 13
    formal_param (33)
        on left: 15
        on right: 13 14
    param_type (34)
        on left: 16 17 18 19
        on right: 15
    statement_list (35)
        on left: 20 21
        on right: 11 12 20
    statement (36)
        on left: 22 23 24
        on right: 20
    optional_local_var_decl_stmt_list (37)
        on left: 25 26
        on right: 11 12
    var_decl_stmt_list (38)
        on left: 27 28
        on right: 26 28
    var_decl_stmt (39)
        on left: 29
        on right: 3 5 27 28
    var_decl_item_list (40)
        on left: 30 31
        on right: 29 30
    var_decl_item (41)
        on left: 32
        on right: 30 31
    named_type (42)
        on left: 33 34 35 36 37
        on right: 10 29
    assignment_statement (43)
        on left: 38
        on right: 22
    print_statement (44)
        on left: 39
        on right: 23
    read_statement (45)
        on left: 40
        on right: 24
    expression (46)
        on left: 41 42 43 44 45 46 47 48
        on right: 38 39 41 42 43 44 45 46
    variable_as_operand (47)
        on left: 49
        on right: 38 47
    variable_name (48)
        on left: 50
        on right: 40 49
    constant_as_operand (49)
        on left: 51 52 53
        on right: 48


State 0

    0 $accept: • program $end

    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    BOOL     shift, and go to state 3
    STRING   shift, and go to state 4
    VOID     shift, and go to state 5

    program                     go to state 6
    global_decl_statement_list  go to state 7
    func_decl                   go to state 8
    func_def_list               go to state 9
    func_header                 go to state 10
    func_def                    go to state 11
    var_decl_stmt               go to state 12
    named_type                  go to state 13


State 1

   33 named_type: INTEGER •

    $default  reduce using rule 33 (named_type)


State 2

   34 named_type: FLOAT •

    $default  reduce using rule 34 (named_type)


State 3

   37 named_type: BOOL •

    $default  reduce using rule 37 (named_type)


State 4

   36 named_type: STRING •

    $default  reduce using rule 36 (named_type)


State 5

   35 named_type: VOID •

    $default  reduce using rule 35 (named_type)


State 6

    0 $accept: program • $end

    $end  shift, and go to state 14


State 7

    1 program: global_decl_statement_list • func_def_list
    3 global_decl_statement_list: global_decl_statement_list • var_decl_stmt
    4                           | global_decl_statement_list • func_decl

    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    BOOL     shift, and go to state 3
    STRING   shift, and go to state 4
    VOID     shift, and go to state 5

    func_decl      go to state 15
    func_def_list  go to state 16
    func_header    go to state 10
    func_def       go to state 11
    var_decl_stmt  go to state 17
    named_type     go to state 13


State 8

    6 global_decl_statement_list: func_decl •

    $default  reduce using rule 6 (global_decl_statement_list)


State 9

    2 program: func_def_list •

    $default  reduce using rule 2 (program)


State 10

    7 func_decl: func_header • LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header • LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON
   11 func_def: func_header • LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   12         | func_header • LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 18


State 11

    9 func_def_list: func_def •

    $default  reduce using rule 9 (func_def_list)


State 12

    5 global_decl_statement_list: var_decl_stmt •

    $default  reduce using rule 5 (global_decl_statement_list)


State 13

   10 func_header: named_type • NAME
   29 var_decl_stmt: named_type • var_decl_item_list SEMICOLON

    NAME  shift, and go to state 19

    var_decl_item_list  go to state 20
    var_decl_item       go to state 21


State 14

    0 $accept: program $end •

    $default  accept


State 15

    4 global_decl_statement_list: global_decl_statement_list func_decl •

    $default  reduce using rule 4 (global_decl_statement_list)


State 16

    1 program: global_decl_statement_list func_def_list •

    $default  reduce using rule 1 (program)


State 17

    3 global_decl_statement_list: global_decl_statement_list var_decl_stmt •

    $default  reduce using rule 3 (global_decl_statement_list)


State 18

    7 func_decl: func_header LEFT_ROUND_BRACKET • formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header LEFT_ROUND_BRACKET • RIGHT_ROUND_BRACKET SEMICOLON
   11 func_def: func_header LEFT_ROUND_BRACKET • formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   12         | func_header LEFT_ROUND_BRACKET • RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER              shift, and go to state 22
    FLOAT                shift, and go to state 23
    BOOL                 shift, and go to state 24
    STRING               shift, and go to state 25
    RIGHT_ROUND_BRACKET  shift, and go to state 26

    formal_param_list  go to state 27
    formal_param       go to state 28
    param_type         go to state 29


State 19

   10 func_header: named_type NAME •
   32 var_decl_item: NAME •

    LEFT_ROUND_BRACKET  reduce using rule 10 (func_header)
    $default            reduce using rule 32 (var_decl_item)


State 20

   29 var_decl_stmt: named_type var_decl_item_list • SEMICOLON
   30 var_decl_item_list: var_decl_item_list • COMMA var_decl_item

    COMMA      shift, and go to state 30
    SEMICOLON  shift, and go to state 31


State 21

   31 var_decl_item_list: var_decl_item •

    $default  reduce using rule 31 (var_decl_item_list)


State 22

   16 param_type: INTEGER •

    $default  reduce using rule 16 (param_type)


State 23

   17 param_type: FLOAT •

    $default  reduce using rule 17 (param_type)


State 24

   18 param_type: BOOL •

    $default  reduce using rule 18 (param_type)


State 25

   19 param_type: STRING •

    $default  reduce using rule 19 (param_type)


State 26

    8 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET • SEMICOLON
   12 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET • LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET  shift, and go to state 32
    SEMICOLON           shift, and go to state 33


State 27

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list • RIGHT_ROUND_BRACKET SEMICOLON
   11 func_def: func_header LEFT_ROUND_BRACKET formal_param_list • RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   13 formal_param_list: formal_param_list • COMMA formal_param

    RIGHT_ROUND_BRACKET  shift, and go to state 34
    COMMA                shift, and go to state 35


State 28

   14 formal_param_list: formal_param •

    $default  reduce using rule 14 (formal_param_list)


State 29

   15 formal_param: param_type • NAME

    NAME  shift, and go to state 36


State 30

   30 var_decl_item_list: var_decl_item_list COMMA • var_decl_item

    NAME  shift, and go to state 37

    var_decl_item  go to state 38


State 31

   29 var_decl_stmt: named_type var_decl_item_list SEMICOLON •

    $default  reduce using rule 29 (var_decl_stmt)


State 32

   12 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET • optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    BOOL     shift, and go to state 3
    STRING   shift, and go to state 4
    VOID     shift, and go to state 5

    $default  reduce using rule 25 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 39
    var_decl_stmt_list                 go to state 40
    var_decl_stmt                      go to state 41
    named_type                         go to state 42


State 33

    8 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON •

    $default  reduce using rule 8 (func_decl)


State 34

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET • SEMICOLON
   11 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET • LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET  shift, and go to state 43
    SEMICOLON           shift, and go to state 44


State 35

   13 formal_param_list: formal_param_list COMMA • formal_param

    INTEGER  shift, and go to state 22
    FLOAT    shift, and go to state 23
    BOOL     shift, and go to state 24
    STRING   shift, and go to state 25

    formal_param  go to state 45
    param_type    go to state 29


State 36

   15 formal_param: param_type NAME •

    $default  reduce using rule 15 (formal_param)


State 37

   32 var_decl_item: NAME •

    $default  reduce using rule 32 (var_decl_item)


State 38

   30 var_decl_item_list: var_decl_item_list COMMA var_decl_item •

    $default  reduce using rule 30 (var_decl_item_list)


State 39

   12 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list • statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 46


State 40

   26 optional_local_var_decl_stmt_list: var_decl_stmt_list •
   28 var_decl_stmt_list: var_decl_stmt_list • var_decl_stmt

    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    BOOL     shift, and go to state 3
    STRING   shift, and go to state 4
    VOID     shift, and go to state 5

    $default  reduce using rule 26 (optional_local_var_decl_stmt_list)

    var_decl_stmt  go to state 47
    named_type     go to state 42


State 41

   27 var_decl_stmt_list: var_decl_stmt •

    $default  reduce using rule 27 (var_decl_stmt_list)


State 42

   29 var_decl_stmt: named_type • var_decl_item_list SEMICOLON

    NAME  shift, and go to state 37

    var_decl_item_list  go to state 20
    var_decl_item       go to state 21


State 43

   11 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET • optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    FLOAT    shift, and go to state 2
    BOOL     shift, and go to state 3
    STRING   shift, and go to state 4
    VOID     shift, and go to state 5

    $default  reduce using rule 25 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 48
    var_decl_stmt_list                 go to state 40
    var_decl_stmt                      go to state 41
    named_type                         go to state 42


State 44

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON •

    $default  reduce using rule 7 (func_decl)


State 45

   13 formal_param_list: formal_param_list COMMA formal_param •

    $default  reduce using rule 13 (formal_param_list)


State 46

   12 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list • RIGHT_CURLY_BRACKET
   20 statement_list: statement_list • statement

    NAME                 shift, and go to state 49
    WRITE                shift, and go to state 50
    READ                 shift, and go to state 51
    RIGHT_CURLY_BRACKET  shift, and go to state 52

    statement             go to state 53
    assignment_statement  go to state 54
    print_statement       go to state 55
    read_statement        go to state 56
    variable_as_operand   go to state 57
    variable_name         go to state 58


State 47

   28 var_decl_stmt_list: var_decl_stmt_list var_decl_stmt •

    $default  reduce using rule 28 (var_decl_stmt_list)


State 48

   11 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list • statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 59


State 49

   50 variable_name: NAME •

    $default  reduce using rule 50 (variable_name)


State 50

   39 print_statement: WRITE • expression SEMICOLON

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 65
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 51

   40 read_statement: READ • variable_name SEMICOLON

    NAME  shift, and go to state 49

    variable_name  go to state 68


State 52

   12 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET •

    $default  reduce using rule 12 (func_def)


State 53

   20 statement_list: statement_list statement •

    $default  reduce using rule 20 (statement_list)


State 54

   22 statement: assignment_statement •

    $default  reduce using rule 22 (statement)


State 55

   23 statement: print_statement •

    $default  reduce using rule 23 (statement)


State 56

   24 statement: read_statement •

    $default  reduce using rule 24 (statement)


State 57

   38 assignment_statement: variable_as_operand • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 69


State 58

   49 variable_as_operand: variable_name •

    $default  reduce using rule 49 (variable_as_operand)


State 59

   11 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list • RIGHT_CURLY_BRACKET
   20 statement_list: statement_list • statement

    NAME                 shift, and go to state 49
    WRITE                shift, and go to state 50
    READ                 shift, and go to state 51
    RIGHT_CURLY_BRACKET  shift, and go to state 70

    statement             go to state 53
    assignment_statement  go to state 54
    print_statement       go to state 55
    read_statement        go to state 56
    variable_as_operand   go to state 57
    variable_name         go to state 58


State 60

   51 constant_as_operand: INTEGER_NUMBER •

    $default  reduce using rule 51 (constant_as_operand)


State 61

   52 constant_as_operand: DOUBLE_NUMBER •

    $default  reduce using rule 52 (constant_as_operand)


State 62

   53 constant_as_operand: STRING_CONSTANT •

    $default  reduce using rule 53 (constant_as_operand)


State 63

   46 expression: LEFT_ROUND_BRACKET • expression RIGHT_ROUND_BRACKET

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 71
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 64

   45 expression: MINUS • expression

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 72
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 65

   39 print_statement: WRITE expression • SEMICOLON
   41 expression: expression • PLUS expression
   42           | expression • MINUS expression
   43           | expression • MULT expression
   44           | expression • DIV expression

    SEMICOLON  shift, and go to state 73
    PLUS       shift, and go to state 74
    MINUS      shift, and go to state 75
    MULT       shift, and go to state 76
    DIV        shift, and go to state 77


State 66

   47 expression: variable_as_operand •

    $default  reduce using rule 47 (expression)


State 67

   48 expression: constant_as_operand •

    $default  reduce using rule 48 (expression)


State 68

   40 read_statement: READ variable_name • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 69

   38 assignment_statement: variable_as_operand ASSIGN • expression SEMICOLON

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 79
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 70

   11 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET •

    $default  reduce using rule 11 (func_def)


State 71

   41 expression: expression • PLUS expression
   42           | expression • MINUS expression
   43           | expression • MULT expression
   44           | expression • DIV expression
   46           | LEFT_ROUND_BRACKET expression • RIGHT_ROUND_BRACKET

    RIGHT_ROUND_BRACKET  shift, and go to state 80
    PLUS                 shift, and go to state 74
    MINUS                shift, and go to state 75
    MULT                 shift, and go to state 76
    DIV                  shift, and go to state 77


State 72

   41 expression: expression • PLUS expression
   42           | expression • MINUS expression
   43           | expression • MULT expression
   44           | expression • DIV expression
   45           | MINUS expression •

    MULT  shift, and go to state 76
    DIV   shift, and go to state 77

    $default  reduce using rule 45 (expression)


State 73

   39 print_statement: WRITE expression SEMICOLON •

    $default  reduce using rule 39 (print_statement)


State 74

   41 expression: expression PLUS • expression

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 81
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 75

   42 expression: expression MINUS • expression

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 82
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 76

   43 expression: expression MULT • expression

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 83
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 77

   44 expression: expression DIV • expression

    NAME                shift, and go to state 49
    INTEGER_NUMBER      shift, and go to state 60
    DOUBLE_NUMBER       shift, and go to state 61
    STRING_CONSTANT     shift, and go to state 62
    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64

    expression           go to state 84
    variable_as_operand  go to state 66
    variable_name        go to state 58
    constant_as_operand  go to state 67


State 78

   40 read_statement: READ variable_name SEMICOLON •

    $default  reduce using rule 40 (read_statement)


State 79

   38 assignment_statement: variable_as_operand ASSIGN expression • SEMICOLON
   41 expression: expression • PLUS expression
   42           | expression • MINUS expression
   43           | expression • MULT expression
   44           | expression • DIV expression

    SEMICOLON  shift, and go to state 85
    PLUS       shift, and go to state 74
    MINUS      shift, and go to state 75
    MULT       shift, and go to state 76
    DIV        shift, and go to state 77


State 80

   46 expression: LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET •

    $default  reduce using rule 46 (expression)


State 81

   41 expression: expression • PLUS expression
   41           | expression PLUS expression •
   42           | expression • MINUS expression
   43           | expression • MULT expression
   44           | expression • DIV expression

    MULT  shift, and go to state 76
    DIV   shift, and go to state 77

    $default  reduce using rule 41 (expression)


State 82

   41 expression: expression • PLUS expression
   42           | expression • MINUS expression
   42           | expression MINUS expression •
   43           | expression • MULT expression
   44           | expression • DIV expression

    MULT  shift, and go to state 76
    DIV   shift, and go to state 77

    $default  reduce using rule 42 (expression)


State 83

   41 expression: expression • PLUS expression
   42           | expression • MINUS expression
   43           | expression • MULT expression
   43           | expression MULT expression •
   44           | expression • DIV expression

    $default  reduce using rule 43 (expression)


State 84

   41 expression: expression • PLUS expression
   42           | expression • MINUS expression
   43           | expression • MULT expression
   44           | expression • DIV expression
   44           | expression DIV expression •

    $default  reduce using rule 44 (expression)


State 85

   38 assignment_statement: variable_as_operand ASSIGN expression SEMICOLON •

    $default  reduce using rule 38 (assignment_statement)
